add more resources and acknowledgments

--- a/index.html
+++ b/index.html
@@ -261,6 +261,26 @@
                         <h3>Answer</h3>
                         <asciinema-player src="examples/while/how-to.cast"></asciinema-player>
                     </section>
+                  </section>
+                  <section>
+                    <h2>Help my brain is exploding</h2>
+                    <h5>a.k.a. more resources</h5>
+                    <ul>
+                      <li><a href="https://www.cs.princeton.edu/courses/archive/spr08/cos217/reading/ProgrammingGroundUp-1-0-lettersize.pdf">Programming from the Ground Up</a></li>
+                      <li>Bombs by Dr. Matthews (in <code>/class/csce212h/bombs</code>)</li>
+                      <li><a href="https://sourceware.org/gdb/current/onlinedocs/gdb/">More about GDB</a></li>
+                      <li><a href="https://github.com/longld/peda">Make GDB nicer</a></li>
+                      <li><a href="https://beginners.re/">RE for Beginners</a></li>
+                    </ul>
+                  </section>
+                  <section>
+                    <h2>The boring stuff</h2>
+                    <h5>a.k.a acknowledgments</h5>
+                    <p>Many thanks to the following people</p>
+                    <ul>
+                      <li><a href="https://hakim.se/">Hakim</a>, creator of <a href="https://github.com/hakimel/reveal.js">reveal.js</a></li>
+                      <li><a href="http://ku1ik.com/">sickill</a>, creator of <a href="https://asciinema.org/">asciinema</a></li>
+                      <li><a href="https://cse.sc.edu/~matthews/">Dr. Matthews</a>, whose binaries I used to learn reverse engineering in the first place</li>
                   </div>
                 </div>
 
